[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "langgraph>=0.5.2",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
]
